<resources>
    <string name="app_name">Scraper</string>
    <string name="action_all_news">All news</string>
    <string name="action_weather">Weather</string>
    <string name="action_bbc">BBC</string>
    <string name="action_cnn">CNN</string>
    <string name="action_google">Google</string>
    <string name="action_nyt">NYT</string>
    <string name="action_reuters">Reuters</string>
    <string name="action_tech_and_science">Tech and science</string>
    <string name="action_programming">Programming</string>
</resources>
