<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="antov.scraper.MainActivity">
    <item
        android:id="@+id/action_all_news"
        android:orderInCategory="100"
        android:title="@string/action_all_news"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_weather"
        android:orderInCategory="101"
        android:title="@string/action_weather"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_bbc"
        android:orderInCategory="102"
        android:title="@string/action_bbc"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cnn"
        android:orderInCategory="103"
        android:title="@string/action_cnn"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_google"
        android:orderInCategory="104"
        android:title="@string/action_google"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_nyt"
        android:orderInCategory="105"
        android:title="@string/action_nyt"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reuters"
        android:orderInCategory="106"
        android:title="@string/action_reuters"
        app:showAsAction="never" />
    <item
        android:id="@+id/tech_and_science"
        android:orderInCategory="107"
        android:title="@string/action_tech_and_science"
        app:showAsAction="never" />
    <item
        android:id="@+id/programming"
        android:orderInCategory="108"
        android:title="@string/action_programming"
        app:showAsAction="never" />
</menu>
